Fix vertical spacing for navbar item combinations
Fix #9370 by using collapsible margin so that items without border+padding can be evenly spaced (caption buttons, bookmark, tab pages), and those with border+padding (notifications, tabs) can be touching. Removes empty element for tab pages when there is only a single page, as it had no functional purpose. Instead, margin is used.

--- a/less/navigationBar.less
+++ b/less/navigationBar.less
@@ -359,7 +359,7 @@
 // Styles had to be reworked to properly position the new caption buttons for Windows
 .navbarCaptionButtonContainer {
   display: flex;
-  //border-bottom: 1px solid #bbb;
+  margin-bottom: @navbarMenubarMargin;
 
   &.allowDragging {
     -webkit-app-region: drag;
